[tool.poetry]
name = "newspace-project-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.7.0.72"
numpy = "^1.24.3"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
flask = "^2.3.1"
flask-restful = "^0.3.9"
flask-cors = "^3.0.10"
julian = "^0.14"
astropy = "^5.3"
astroquery = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
